--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/windows,eclipse,java,java-web
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,eclipse,java,java-web
+# Created by https://www.toptal.com/developers/gitignore/api/windows,eclipse,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,eclipse,java
 
 ### Eclipse ###
 .metadata
@@ -68,9 +67,11 @@ local.properties
 # Spring Boot Tooling
 .sts4-cache/
 
-### Eclipse Patch ###
 # Eclipse Core
 .project
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 ### Java ###
 # Compiled class file
@@ -96,10 +97,6 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-### Java-Web ###
-## ignoring target file
-target/
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -127,4 +124,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java,java-web
+# End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java
