박민지 : 메뉴바 스크롤 적용, aws s3 연결 확인

--- a/GreenFood/.gitignore
+++ b/GreenFood/.gitignore
@@ -17,6 +17,9 @@ local.properties
 .project
 .classpath
 
+# S3 accessKey, secretKey
+Keys.java
+
 # External tool builders
 .externalToolBuilders/
 
