--- a/GreenFood/pom.xml
+++ b/GreenFood/pom.xml
@@ -12,12 +12,12 @@
         <properties>
                 <java-version>1.8</java-version>
                 <org.springframework-version>4.1.7.RELEASE</org.springframework-version>
+                <spring-security-version>4.1.5.RELEASE</spring-security-version>
                 <org.aspectj-version>1.6.10</org.aspectj-version>
                 <org.slf4j-version>1.6.6</org.slf4j-version>
         </properties>
         
 <dependencies>
-
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<!-- 이메일보내는 라이브러리 -->
 		<dependency>
